# codemanager_rust_axum

./: .env  Cargo.toml  README.md  config.toml  git2.md  notes.md  road.md
.VSCodeCounter/2025-04-15_17-15-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: git.rs  lib.rs  main.rs
src/db/: pg.rs
src/dtos/: request.rs
src/gitmodule/: mod.rs  structs.rs
src/handlers/: handler.rs
src/models/: message.rs  user.rs
src/routes/: auth.rs
src/services/: service.rs
src/shared/: auth_middleware.rs  error.rs  jwt.rs  mod.rs  response.rs  setting.rs
src/vos/: mod.rs  userdata.rs
